--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -55,26 +55,17 @@
 
             <EditText
                 android:id="@+id/usernametext"
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="20dip"
-                android:layout_marginTop="5dip"
-                android:layout_weight="1"
+                style="@style/primestyle"
                 android:hint="@string/username"
                 android:inputType="text"
-                android:singleLine="true"
-                android:typeface="monospace" />
+                android:singleLine="true" />
 
             <EditText
                 android:id="@+id/passwordtext"
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="5dip"
-                android:layout_weight="1"
+                style="@style/primestyle"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:singleLine="true"
-                android:typeface="monospace" />
+                android:singleLine="true" />
 
             <Button
                 android:id="@+id/loginbutton"
