--- a/res/layout/activity_dashboard.xml
+++ b/res/layout/activity_dashboard.xml
@@ -48,25 +48,33 @@
                 android:layout_marginLeft="10dip"
                 android:contentDescription="@string/imgdesc"
                 android:src="@drawable/logo" />
+
         </LinearLayout>
 
         <TextView
             android:id="@+id/welcomeText"
-            style="@dimen/activity_horizontal_margin"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/header"
-            android:background="@dimen/activity_horizontal_margin"
-            android:fadingEdge="horizontal"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="0.73"
             android:fontFamily="normal"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:shadowColor="#000000"
-            android:text="Welcome "
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:paddingRight="0dp"
+            android:paddingTop="0dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#000000"
+            android:textSize="20dp"
             android:textStyle="bold" />
+
+        <ListView
+            android:id="@+id/notifList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/welcomeText" >
+        </ListView>
 
     </RelativeLayout>
 
