--- a/res/layout/activity_dashboard.xml
+++ b/res/layout/activity_dashboard.xml
@@ -16,23 +16,7 @@
 
         <!-- Login Form -->
 
-        <LinearLayout
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dip" >
-
-            <LinearLayout
-                android:id="@+id/datelayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" > 
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/header"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -49,7 +33,15 @@
                 android:contentDescription="@string/imgdesc"
                 android:src="@drawable/logo" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/signoutButton"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:onClick="signout"
+                android:src="@drawable/signout"
+                android:layout_alignParentRight="true" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/welcomeText"
